# idlergear

./: .gitignore  .goosehints  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPLETE_WORKFLOW.md  COPILOT.md  DEMO-README.md  DESIGN.md  DEVELOPMENT.md  EDDI_INTEGRATION.md  FEATURES_STATUS.md  GEMINI.md  GRAPH_POPULATE_FIX.md  IDEAS.md  INSTALLATION_GUIDE.md  OPPORTUNISTIC_INDEXING.md  QUICKSTART.md  README.md  ROADMAP.md  TODO.md  VISION.md  clean.sh  demo-claude-integration.sh  demo-graph-quick.sh  demo-graph.sh  demo-interesting-numbers.sh  demo-mcp-verification.sh  demo.sh  evaluate-demo.sh  monitor_messages.py  pyproject.toml  requirements.in  requirements.txt  run.sh  send_and_monitor.py  test-claude-integration.sh  test_daemon_manual.sh
.claude/: hooks.json
.claude/hooks/: session-start.sh  stop.sh
.claude/rules/: check-suggestions.md
.github/workflows/: docs.yml
.idlergear/: config.toml  file_registry.json  otel.db  priorities.yaml  session_state.json.backup
.idlergear/agents/: agents.json
.idlergear/logs/: metadata.json
.idlergear/messages/: 24f78bf9.json  356f4908.json  50241fab.json
.idlergear/notes/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  017.md  018.md  019.md  020.md  021.md  022.md  023.md  024.md  025.md  026.md  027.md  028.md  029.md  030.md  031.md  032.md  033.md  034.md  035.md
.idlergear/plans/: test-plan.json
.idlergear/reference/: architecture.md  autonomous-issue-management-and-daemon-initiated.md  claude-code-hooks-and-idlergear-integration.md  claude-code-session-analysis-common-command.md  cli-commands-for-multi-agent-communication.md  commands-reference.md  competitive-analysis-idlergear-vs-state-of-the.md  daemon-queue-architecture-multi-session.md  design-external-terminal-run-tracking-ig-run.md  design-test-awareness-enhancements-idlergear-test.md  getting-started.md  github-backend-mapping-design.md  github-integration.md  home.md  idlergear-claude-code-integration-strategy.md  idlergear-integration-hooks-and-proactive.md  idlergear-mcp-tool-naming-convention.md  ig-run-and-ig-test-issue-priority-and-dependencies.md  integration-priority-strategy-value-vs-complexity.md  issue-prioritization-and-dependencies.md  issues-to-close-or-update-integration-strategy.md  knowledge-types.md  mcp-server.md  mcp-servers-review-2026.md  multi-agent-coordination-architecture.md  multi-agent-messaging-architecture.md  priority-issues-and-quick-wins-analysis-jan-2026.md  project-status-and-prioritized-roadmap-2026-01-03.md  python-first-mcp-architecture.md  refactoring-plan-dead-code-and-cleanup.md  script-generation-and-daemon-integration.md  session-summary-strategic-roadmap-competitive.md  shell-script-pattern-for-long-running-processes.md  token-efficient-usage-guide.md  (+2 more)
AI_INSTRUCTIONS/: COPILOT.md  EDDI_HIDDEN_SERVICES.md  GEMINI.md  IDLERGEAR_TOOLS.md  LLM_BACKEND.md  LOGGING_DEBUGGING.md  README.md  RECOMMENDED_TOOLS.md  RESEARCH_REQUIREMENTS.md  TELEPORT_RESTORE_WORKFLOW.md
agents/: agents.json
containers/: test-build.Containerfile  test-install.Containerfile
docs/: CLAUDE_CODE_HOOKS.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  INTEGRATION_GUIDE.md  PLANNING.md  ROADMAP.md  file-annotation-storage.md  github-labels.md
examples/: multi_agent_demo.sh  proactive_behaviors_demo.md
plugin/: README.md  plugin.json
scripts/: demo-app.sh  podman-test.sh
src/: check.py  context.py  coord.py  eddi.py  logs.py  main.py  mcp_server.py  messages.py  status.py  sync.py  teleport.py
tests/: __init__.py  benchmark_file_registry.py  conftest.py  test_agents.py  test_aider.py  test_assistant_install.py  test_backends.py  test_check.py  test_cli.py  test_cli_file_registry.py  test_code_populator.py  test_config.py  test_context.py  test_context_suggestions.py  test_coord.py  test_cursor.py  test_daemon.py  test_daemon_direct.py  test_daemon_integration.py  test_data_file_detector.py  test_display.py  test_doc_coverage.py  test_docs.py  test_docs_dotnet.py  test_docs_rust.py  test_doctor.py  test_env.py  test_env_activation.py  test_explorations.py  test_file_annotation_storage.py  test_file_registry.py  test_formatters.py  test_fs.py  test_gaps.py  test_generators.py  test_git.py  test_git_version_detector.py  test_github_backend.py  test_github_detect.py  test_github_token.py  (+53 more)
(+378 files in other folders)
