[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idlergear"
version = "0.3.0"
description = "A knowledge management API that synchronizes AI context management with human project management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
idlergear = "idlergear.cli:app"
idlergear-mcp = "idlergear.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/idlergear"]

[tool.hatch.build.targets.sdist]
include = ["src/idlergear"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "claude_integration: marks tests that require claude CLI and API access",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
