[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idlergear"
version = "0.7.42"
description = "A knowledge management API that synchronizes AI context management with human project management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
    "mcp>=1.0.0",
    "psutil>=5.9.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-proto>=1.20.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
    "textual>=0.47.0",
    "watchdog>=3.0.0",
    "kuzu>=0.11.3",
    "libtmux>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
watch = [
    "watchdog>=3.0.0",
]
docs = [
    "pdoc>=14.0.0",
]

[project.scripts]
idlergear = "idlergear.cli:app"
ig = "idlergear.cli:app"  # Short alias
idlerwatch = "idlergear.cli:monitor_shortcut"  # Session monitoring TUI
idlergear-mcp = "idlergear.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "claude_integration: marks tests that require claude CLI and API access",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
